--- a/m1d8.html
+++ b/m1d8.html
@@ -185,9 +185,7 @@
 
         const inputField = function(){
 
-        let input = document.getElementById("input-field");
-        alert("done")
-        
+            console.log(document.getElementById('input-field').value); 
     
     }
 
